--- a/style.css
+++ b/style.css
@@ -1,1 +1,9 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
+*{
+    margin: 0px; 
+    padding: 0px;
+    font-family: "Madimi One", sans-serif;
+    margin: auto;
+    font-size: normal;
+    background-color:linen;
+}
